--- a/ewallet/payment/templates/registration/login.html
+++ b/ewallet/payment/templates/registration/login.html
@@ -22,4 +22,6 @@
         <input type="hidden" name="next" value="{{ next }}">
     </form>
 
+    <p><a href="{% url 'register' %}">Register</a></p>
+
 </body>
